syntax                                      = "proto3";

package ability;

option (gogoproto.testgen_all)              = true;
option (gogoproto.benchgen_all)             = true;
option (gogoproto.populate_all)             = true;
option (gogoproto.goproto_getters_all)      = false;
option (gogoproto.goproto_stringer_all)     = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_enum_prefix_all)  = false;
option (gogoproto.goproto_registration)     = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

import "github.com/elojah/game_03/pkg/geometry/geometry.proto";
import "github.com/elojah/game_03/pkg/entity/entity.proto";

enum Target {
	NoneTarget                                 = 0;
	Self                                       = 1;
	Foe                                        = 3;
	ClosestSelf                                = 4;
	ClosestFoe                                 = 5;

	// geometry aoe
	Rect                                       = 6;
	Circle                                     = 7;
}

message AbilityModifier {
	// Cancel ability
	bool Cancel                                = 1;
	// Add cast time
	int64 CastTime                             = 2;
	// Add mana cost
	int64 ManaCost                             = 3;
	// Add cooldown
	int64 Cooldown                             = 4;
}

message EffectModifier {
	// Effect modifiers
	bytes EffectID                             = 1 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];
	// Cancel effect
	bool Cancel                                = 2;
	// Change affected stat
	entity.Stat Stat                           = 3;
	// Add amount
	Amount Amount                              = 4 [(gogoproto.nullable) = false];
	// Change duration
	int64 Duration                             = 5;
	// Add Delay
	int64 Delay                                = 6;
	// Change tick rate
	int64 Repeat                               = 7;
	// Add stacks
	StackRules StackRules                      = 8 [(gogoproto.nullable) = false];
}

// Amount used for ability
message Amount {
    bytes ID                                   = 1 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];

	int64 Direct                               = 2;

	Target Target                              = 3;

	// Stat percentage of target
	entity.Stat Stat                           = 4;
	int64 Percentage                           = 5;

	// number of effect stacks on target
    bytes EffectID                             = 6 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];

	// StatOutcome indicates if we use stat diff of outcome effect
	// if false, use e.Stat/effect value, if true, use e.PrevStat - e.NewStat post effect.
	// if true in first effect map (no diff yet), amount is invalid == 0
	bool StatOutcome                           = 7;
}

enum Operator {
	NoneOperator                               = 0;
	Equal                                      = 1;
	NotEqual                                   = 2;
	Greater                                    = 3;
	Lesser                                     = 4;
}

message Trigger {
	Operator Operator                             = 1;
	Amount Amount                                 = 2;
	Amount Treshold                               = 3;

	map<string, AbilityModifier> AbilityModifiers = 4 [(gogoproto.nullable) = false];
	map<string, EffectModifier> EffectModifiers   = 5 [(gogoproto.nullable) = false];
}

message StackRules {
	int64 Stacks                               = 1;
	int64 MaxStacks                            = 2;
	int64 MaxDuration                          = 3;
}

message Effect {
	// if HP/MP, duration is ignored
	entity.Stat Stat                           = 1;

	// Movement effect (TP or push back)
	geometry.Vec2 Position                     = 2;
	geometry.Vec2 Force                        = 3; // Teleport if force == 0/0

	Amount Amount                              = 4 [(gogoproto.nullable) = false];

	// stack rules
	// if duration 0 or ignored, overtime effects ignored too
	int64 Duration                             = 5;
	bytes Icon                                 = 6 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];

	// Tick only if duration > 0 and not ignored
	int64 Delay                                = 7; // after ms
	int64 Repeat                               = 8; // each ms

	StackRules StackRules                      = 9 [(gogoproto.nullable) = false];

	map<string, Target> Targets                = 10;

	// preventive triggers before applying this effect
	map<string, Trigger> Triggers              = 11 [(gogoproto.nullable) = false];

	// recursive effects to run after this effect
	map<string, Effect> Effects                = 12 [(gogoproto.nullable) = false];
}

message Ability {
    bytes ID                                   = 1 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];
	string Name                                = 2;

	bytes Icon                                 = 3 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];
	bytes Animation                            = 4 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];

	int64 CastTime                             = 5;
	int64 ManaCost                             = 6;
	int64 Cooldown                             = 7;

	map<string, Effect> Effects                = 8 [(gogoproto.nullable) = false];
}
