syntax = "proto3";

package dto;

option (gogoproto.testgen_all)  = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_registration) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/elojah/game_03/pkg/ability/ability.proto";

message ListAbilityReq {
    bytes EntityID                       = 1 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];

    int64 Size                           = 2;
    bytes State                          = 3;
}

message ListAbilityResp {
    repeated ability.A Abilities         = 1 [(gogoproto.nullable) = false];
    bytes State                          = 2;
}
